--- a/css/components/header.less
+++ b/css/components/header.less
@@ -52,46 +52,33 @@ header{
     }
   }
 
-  .actionButtons{
-    padding-top: 10px;
-    a{
-      color: #999;
-      display: inline-block;
-      margin: 5px 7px;
-      &:hover{
-        color: @red;
-        text-decoration: none;
+
+
+  .nav{
+    .dropdown{
+      .userWrapper{
+        max-height: 350px;
+        width: 200px;
+        overflow-y: scroll;
       }
-      i{
-        font-size: 20px; 
+      
+      .currentUser{
+        img{
+          width: 36px;
+          height: 36px;
+        }
+      }
+      
+      .users{
+        li{
+          img{
+            width: 25px;
+            height: 25px;
+          }
+        }
       }
     }
   }
-
-  .account{
-    padding-top: 5px;
-    margin: 10px;
-    a:hover{
-      text-decoration: none;
-      color: @red;
-    }
-    h4{
-      color: #999;
-      vertical-align: top;
-      &:hover{
-        color: @red;
-        text-decoration: none;
-      }
-      i{
-       vertical-align: top;
-       padding: right: 5px;
-       font-size: 20px; 
-       color: #999;
-      }
-
-    }
-  }
-
 
 
  
