--- a/css/components/menu.less
+++ b/css/components/menu.less
@@ -2,16 +2,54 @@
 .menu{
 
   .notificationContainer{
-    &.span2{
+    &.span3{
       margin-left: 0px;
-      width: 17.05%;
+      width: 25.4%;
     }
   
     li{
-      padding: 10px;
-      margin-bottom: 5px;
-      background-color: lighten(#efefef,5%);
-      border: 1px #efefef solid;
+      padding: 0px 4px 0px 10px;
+      margin-bottom: 15px;
+      border-right: 1px solid #999;      
+      cursor: pointer;
+
+      &.pending{
+        border-right: 2px solid @blue;      
+      }
+    
+      &:hover{
+        border-right: 2px solid @blueDark;  
+      }
+    
+      img{
+        float: left;
+        border: 1px solid #ddd;
+        padding: 1px;
+        margin-right: 4px;
+        height: 50px;
+      }
+
+      h6{
+        margin-bottom: 1px;
+        line-height: 11px;
+        color: @blue;
+      }
+
+      .text{
+        display: inline;
+        margin-bottom: 0px;
+        padding-bottom: 0px;
+        font-weight: 200;
+        font-size: 12px;
+        line-height: 12px;
+      }
+      
+      .date{
+        font-size: 11px;
+        color: #999;
+        text-align: right
+      }
+      
     }
   }
 
@@ -28,11 +66,11 @@
     li{
       border: none;
       height: 70px;
-      width: 85px;
+      width: 90px;
       text-align: center;
       cursor: pointer;
       float: left;
-      margin: 14px 10px 7px 10px;
+      margin: 14px 14px 7px 10px;
     
       &:hover{
         >* {
@@ -41,12 +79,12 @@
       }
     
       i{
-        font-size: 28px;
+        font-size: 25px;
         color: #454545;
       }
       span{
         font-size: 17px;
-        font-weight: 200;
+        font-weight: 100;
         display: block;
         max-width: 100px;
       }
@@ -55,9 +93,9 @@
         background-color: #555;
         color: #fff;
         margin: 0px;
-        width: 120px;
+        width: 109px;
         height: 60px;
-        margin-right: 15px;
+        margin-right: 8px;
         margin-top: 10px;
         .border-radius(10px);
         h4{
