add pusher auth url

--- a/views/test.jade
+++ b/views/test.jade
@@ -50,7 +50,7 @@ html(lang="en")
         var App = require("index");
         var ErrorManager = require("managers/errorManager");
 
-        var pusherKey = "#{pusherKey}";
+        var pusherKey = !{pusherKeys};
         var parseKeys = !{parseKeys};
         var statApi = "7fe222080e1ae26d9f89ba1ba8f320b2";
         
