--- a/public/application.css
+++ b/public/application.css
@@ -811,12 +811,14 @@ i.modal_success{font-size:40px;color:#46a546;}
 .proveedores .proveedores_list li.active a{color:#fff;}
 .proveedores .proveedores_list li a{text-transform:capitalize;}
 .menu .notificationContainer.span3{margin-left:0px;width:25.4%;}
-.menu .notificationContainer li{padding:0px 4px 0px 10px;margin-bottom:15px;border-right:1px solid #999;cursor:pointer;}.menu .notificationContainer li.pending{border-right:2px solid #049cdb;}
-.menu .notificationContainer li:hover{border-right:2px solid #0064cd;}
-.menu .notificationContainer li img{float:left;border:1px solid #ddd;padding:1px;margin-right:4px;height:50px;}
-.menu .notificationContainer li h6{margin-bottom:1px;line-height:11px;color:#049cdb;}
-.menu .notificationContainer li .text{display:inline;margin-bottom:0px;padding-bottom:0px;font-weight:200;font-size:12px;line-height:12px;}
-.menu .notificationContainer li .date{font-size:11px;color:#999;text-align:right;}
+.menu .notificationContainer .tabHeader .hasNots i{font-size:20px;}
+.menu .notificationContainer .tabHeader .hasNots.has{color:#9d261d;}
+.menu .notificationContainer .notificacion_list li{padding:0px 4px 0px 10px;margin-bottom:15px;border-right:1px solid #999;cursor:pointer;}.menu .notificationContainer .notificacion_list li.pending{border-right:2px solid #049cdb;}
+.menu .notificationContainer .notificacion_list li:hover{border-right:2px solid #0064cd;}
+.menu .notificationContainer .notificacion_list li img{float:left;border:1px solid #ddd;padding:1px;margin-right:4px;height:50px;}
+.menu .notificationContainer .notificacion_list li h6{margin-bottom:1px;line-height:11px;color:#049cdb;}
+.menu .notificationContainer .notificacion_list li .text{display:inline;margin-bottom:0px;padding-bottom:0px;font-weight:200;font-size:12px;line-height:12px;}
+.menu .notificationContainer .notificacion_list li .date{font-size:11px;color:#999;text-align:right;}
 .menu .menuContainer{border-right:1px solid #efefef;}.menu .menuContainer .appList{border-bottom:1px solid #efefef;}.menu .menuContainer .appList:last-child{border:none;}
 .menu .menuContainer li{border:none;height:70px;width:90px;text-align:center;cursor:pointer;float:left;margin:14px 14px 7px 10px;}.menu .menuContainer li:hover>*{color:#049cdb;}
 .menu .menuContainer li i{font-size:25px;color:#454545;}
