remove scroll from familias

--- a/css/components/productos.less
+++ b/css/components/productos.less
@@ -9,6 +9,7 @@
   background-color: #fff;
   max-height: 300px;
   overflow-y: hidden;
+  overflow-x: hidden;
   @shadow: 0 1px 4px rgba(33,33,33,.2);
   .box-shadow(@shadow);
  
