productos to normal position

--- a/css/general.less
+++ b/css/general.less
@@ -3,14 +3,14 @@ html {
 }
 
 
-@bodyMarginTop: 115px;
+@bodyMarginTop: 64px;
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding-top: @bodyMarginTop;
   &.noScroll{
-    overflow: hidden; 
-    height: 100%;
+    //overflow: hidden; 
+    //height: 100%;
   }
 }
 
