--- a/css/components/productos.less
+++ b/css/components/productos.less
@@ -1,13 +1,14 @@
 .productosToolbar{
 
   -webkit-tap-highlight-color: rgba(0,0,0,0);
-  position: fixed;
-  top: 59px;
-  left: 0px;
-  right: 0px;
-  z-index: 1100;
+  //position: fixed;
+  //top: 59px;
+  //left: 0px;
+  //right: 0px;
+  //z-index: 1100;
   background-color: #fff;
   max-height: 300px;
+  margin-bottom: 15px;
   overflow-y: hidden;
   overflow-x: hidden;
   @shadow: 0 1px 4px rgba(33,33,33,.2);
