--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@
 //if IE 8
   <html class="no-js lt-ie9" lang="en">
 
-html(lang="en" , manifest="manifest")  
+html(lang="en")  
   
   head
     meta(charset='utf-8')
@@ -42,26 +42,15 @@ html(lang="en" , manifest="manifest")
       });
       
     script(type='text/javascript', charset='utf-8')
-      var apiServer = "http://api2s.heroku.com";
       
       var jQuery  = require("jqueryify");
       var exports = this;
       jQuery(function(){
         var App = require("index");
         var ErrorManager = require("managers/errorManager");
-
-        var pusherKeys = !{pusherKeys};
-        var parseKeys = !{parseKeys};
-        var statApi = "7fe222080e1ae26d9f89ba1ba8f320b2";
-        
-        
-        //var server= "http://127.0.0.1:9393";
-        var server= "http://rodco-api2.heroku.com";
-        //var server= "http://api2s.heroku.com";
-        
-        var instance_url = "https://cs11.salesforce.com";
-        exports.app =  new App({ el: $(".appCanvas") , options: {statApi: statApi , salesforceSession: null , server: server , pusherKeys: pusherKeys, parseKeys: parseKeys} });
-
+       
+        exports.app =  new App({ el: $(".appCanvas") , options: { key: "1ks"  !{jsvars} }});
+ 
         window.onerror = function (msg, url, num) {
           ErrorManager.logError(msg)
         }
@@ -69,7 +58,5 @@ html(lang="en" , manifest="manifest")
       });
 
 
-  body.nice
+  body
     != body
-    
-      
