add safety to token

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -51,9 +51,9 @@ html(lang="en")
        
         exports.app =  new App({ el: $(".appCanvas") , options: { key: "1ks"  !{jsvars} }});
  
-        window.onerror = function (msg, url, num) {
-          ErrorManager.logError(msg)
-        }
+        //window.onerror = function (msg, url, num) {
+          //ErrorManager.logError(msg)
+        //}
 
       });
 
