--- a/css/index.less
+++ b/css/index.less
@@ -2,6 +2,7 @@
 @import "./components/lightbox.less";
 @import "./components/popupSelect.less";
 @import "./components/menu.less";
+@import "./components/notificaciones.less";
 @import "./components/header.less";
 @import "./components/footer.less";
 @import "./components/productos.less";
