--- a/public/application.css
+++ b/public/application.css
@@ -810,21 +810,21 @@ i.modal_success{font-size:40px;color:#46a546;}
 .proveedores .proveedores_list li.active{background-color:#08c;}
 .proveedores .proveedores_list li.active a{color:#fff;}
 .proveedores .proveedores_list li a{text-transform:capitalize;}
-.menu .notificationContainer.span3{margin-left:0px;width:25.4%;}
-.menu .notificationContainer .tabHeader .hasNots i{font-size:20px;}
-.menu .notificationContainer .tabHeader .hasNots.has{color:#9d261d;}
-.menu .notificationContainer .notificacion_list li{padding:0px 4px 0px 10px;margin-bottom:15px;border-right:1px solid #999;cursor:pointer;}.menu .notificationContainer .notificacion_list li.pending{border-right:2px solid #049cdb;}
-.menu .notificationContainer .notificacion_list li:hover{border-right:2px solid #0064cd;}
-.menu .notificationContainer .notificacion_list li img{float:left;border:1px solid #ddd;padding:1px;margin-right:4px;height:50px;}
-.menu .notificationContainer .notificacion_list li h6{margin-bottom:1px;line-height:11px;color:#049cdb;}
-.menu .notificationContainer .notificacion_list li .text{display:inline;margin-bottom:0px;padding-bottom:0px;font-weight:200;font-size:12px;line-height:12px;}
-.menu .notificationContainer .notificacion_list li .date{font-size:11px;color:#999;text-align:right;}
 .menu .menuContainer{border-right:1px solid #efefef;}.menu .menuContainer .appList{border-bottom:1px solid #efefef;}.menu .menuContainer .appList:last-child{border:none;}
 .menu .menuContainer li{border:none;height:70px;width:90px;text-align:center;cursor:pointer;float:left;margin:14px 14px 7px 10px;}.menu .menuContainer li:hover>*{color:#049cdb;}
 .menu .menuContainer li i{font-size:25px;color:#454545;}
 .menu .menuContainer li span{font-size:17px;font-weight:100;display:block;max-width:100px;}
 .menu .menuContainer li.header{background-color:#555;color:#fff;margin:0px;width:109px;height:60px;margin-right:8px;margin-top:10px;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px;}.menu .menuContainer li.header h4{padding-top:20px;font-weight:200;}
 .menu .menuContainer li.header:hover h4{color:#fff;}
+.notificationContainer.span3{margin-left:0px;width:25.4%;}
+.notificationContainer .tabHeader .hasNots i{font-size:20px;}
+.notificationContainer .tabHeader .hasNots.has{color:#9d261d;}
+.notificationContainer .notificacion_list li{padding:0px 4px 0px 10px;margin-bottom:15px;border-right:1px solid #999;cursor:pointer;}.notificationContainer .notificacion_list li.pending{border-right:2px solid #049cdb;}
+.notificationContainer .notificacion_list li:hover{border-right:2px solid #0064cd;}
+.notificationContainer .notificacion_list li img{float:left;border:1px solid #ddd;padding:1px;margin-right:4px;height:50px;}
+.notificationContainer .notificacion_list li h6{margin-bottom:1px;line-height:11px;color:#049cdb;}
+.notificationContainer .notificacion_list li .text{display:inline;margin-bottom:0px;padding-bottom:0px;font-weight:200;font-size:12px;line-height:12px;}
+.notificationContainer .notificacion_list li .date{font-size:11px;color:#999;text-align:right;}
 header .navbar-inner{padding:4px 0px;background-image:url("/images/furley_bg.png");}
 header .headerWrapper{text-align:center;}header .headerWrapper input{margin-top:13px;color:#0064cd;margin-top:5px;background-color:#fff;display:inline-block;padding:8px 13px;-webkit-border-radius:25px;-moz-border-radius:25px;border-radius:25px;}
 header .productIcon{font-size:25px;vertical-align:middle;color:#666;margin-right:5%;}
