--- a/views/online.jade
+++ b/views/online.jade
@@ -8,7 +8,7 @@
 //if IE 8
   <html class="no-js lt-ie9" lang="en">
 
-html(lang="en" , manifest="no.manifest")
+html(lang="en")
   
   head
     meta(charset='utf-8')
@@ -35,7 +35,10 @@ html(lang="en" , manifest="no.manifest")
       window.addEventListener('load', function(e) {
         window.applicationCache.addEventListener( 'updateready', function(e) {
             if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
-              window.applicationCache.swapCache();
+              try{
+                window.applicationCache.swapCache();
+              }
+              catch(err){}
               window.location.reload();
             }
         });
