--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@
 //if IE 8
   <html class="no-js lt-ie9" lang="en">
 
-html(lang="en" , manifest="no.manifest")
+html(lang="en" , manifest="manifest")
   
   head
     meta(charset='utf-8')
@@ -34,8 +34,13 @@ html(lang="en" , manifest="no.manifest")
     script(type='text/javascript', charset='utf-8')
       window.addEventListener('load', function(e) {
         window.applicationCache.addEventListener( 'updateready', function(e) {
-            if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
-              window.applicationCache.swapCache();
+            try{
+              if (window.applicationCache.status == window.applicationCache.UPDATEREADY) {
+                window.applicationCache.swapCache();
+                window.location.reload();
+              }
+            }
+            catch(error){
               window.location.reload();
             }
         });
