add manifest and fix login

--- a/css/components/productos.less
+++ b/css/components/productos.less
@@ -57,8 +57,9 @@
     overflow: hidden;
     .badge{
       cursor: pointer;
-      margin: 6px 4px;
+      margin: 5px 4px 6px 4px;
       color: @blueDark;
+      font-weight: 200;
       padding: 6px 13px 6px;
       text-shadow: 0 0 0;
       font-size: 13px;
