--- a/public/application.css
+++ b/public/application.css
@@ -825,12 +825,10 @@ i.modal_success{font-size:40px;color:#46a546;}
 .notificationContainer .notificacion_list li h6{margin-bottom:1px;line-height:11px;color:#049cdb;}
 .notificationContainer .notificacion_list li .text{display:inline;margin-bottom:0px;padding-bottom:0px;font-weight:200;font-size:12px;line-height:12px;}
 .notificationContainer .notificacion_list li .date{font-size:11px;color:#999;text-align:right;}
-header .navbar-inner{padding:4px 0px;background-image:url("/images/furley_bg.png");}
-header .headerWrapper{text-align:center;}header .headerWrapper input{margin-top:13px;color:#0064cd;margin-top:5px;background-color:#fff;display:inline-block;padding:8px 13px;-webkit-border-radius:25px;-moz-border-radius:25px;border-radius:25px;}
+header .navbar-inner{padding:0px 0px;background-image:url("/images/furley_bg.png");}
+header .headerWrapper{text-align:center;}header .headerWrapper input{color:#0064cd;margin-top:12px;background-color:#fff;display:inline-block;padding:7px 13px;-webkit-border-radius:25px;-moz-border-radius:25px;border-radius:25px;}
 header .productIcon{font-size:25px;vertical-align:middle;color:#666;margin-right:5%;}
-header .navbar .brand{padding:0px;font-size:50px;color:#fff;text-shadow:0 1px 1px rgba(33, 33, 33, 0.65);vertical-align:baseline;}header .navbar .brand .home{vertical-align:top;padding:5px;}header .navbar .brand .home i{vertical-align:top;font-size:23px;color:#0064cd;}
-header .navbar .brand .first{color:#0064cd;font-size:60px;font-weight:800;line-height:30px;}
-header .navbar .brand .version{font-size:12px;color:#999;}
+header .navbar .brand{vertical-align:top;padding:0px;font-size:50px;color:#fff;text-shadow:0 1px 1px rgba(33, 33, 33, 0.65);vertical-align:baseline;}header .navbar .brand img{vertical-align:top;height:50px;margin-top:2px;cursor:pointer;margin-bottom:2px;}
 header .nav .dropdown .userWrapper{max-height:350px;width:200px;overflow-y:scroll;}
 header .nav .dropdown .currentUser img{width:36px;height:36px;}
 header .nav .dropdown .users li img{width:25px;height:25px;}
@@ -844,7 +842,7 @@ footer a{margin-top:15px;color:#049cdb;}footer a i{vertical-align:middle;font-si
 @-webkit-keyframes loading{from{-webkit-transform:rotate(0deg);} to{-webkit-transform:rotate(360deg);}}.productosToolbar{-webkit-tap-highlight-color:rgba(0, 0, 0, 0);position:fixed;top:59px;left:0px;right:0px;z-index:1100;background-color:#fff;max-height:300px;overflow-y:hidden;overflow-x:hidden;-webkit-box-shadow:0 1px 4px rgba(33, 33, 33, 0.2);-moz-box-shadow:0 1px 4px rgba(33, 33, 33, 0.2);box-shadow:0 1px 4px rgba(33, 33, 33, 0.2);}.productosToolbar.closed{max-height:35px;-webkit-box-shadow:0 0 0;-moz-box-shadow:0 0 0;box-shadow:0 0 0;}
 .productosToolbar .container{position:relative;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);}.productosToolbar .container .options{position:absolute;right:-9px;top:7px;}.productosToolbar .container .options span{padding:4px;text-align:center;}.productosToolbar .container .options span:hover{color:#0064cd;}
 .productosToolbar .container .options span i{font-size:25px;display:inline-block;margin-right:10px;}.productosToolbar .container .options span i.active{color:#0064cd;opacity:1;}
-.productosToolbar .familias_list{margin:0px;padding-right:30px;height:35px;overflow:hidden;}.productosToolbar .familias_list .badge{cursor:pointer;margin:6px 4px;color:#0064cd;padding:6px 13px 6px;text-shadow:0 0 0;font-size:13px;border:#efefef 1px solid;background-image:url("/images/furley_bg.png");}.productosToolbar .familias_list .badge:hover,.productosToolbar .familias_list .badge.active{background:none;background-color:#0064cd;color:#ffffff;}
+.productosToolbar .familias_list{margin:0px;padding-right:30px;height:35px;overflow:hidden;}.productosToolbar .familias_list .badge{cursor:pointer;margin:5px 4px 6px 4px;color:#0064cd;font-weight:200;padding:6px 13px 6px;text-shadow:0 0 0;font-size:13px;border:#efefef 1px solid;background-image:url("/images/furley_bg.png");}.productosToolbar .familias_list .badge:hover,.productosToolbar .familias_list .badge.active{background:none;background-color:#0064cd;color:#ffffff;}
 .productosToolbar .grupos_list{background-color:#fff;max-height:250px;overflow-y:scroll;margin:0px;margin-top:10px;overflow-x:hidden;}.productosToolbar .grupos_list .badge{text-shadow:0 0 0;cursor:pointer;font-size:13px;margin:5px;-webkit-border-radius:15px 0px 15px 15px;-moz-border-radius:15px 0px 15px 15px;border-radius:15px 0px 15px 15px;background-color:#efefef;color:#0064cd;padding:9px;border:1px dotted #fff;}.productosToolbar .grupos_list .badge:hover{border:1px solid #0064cd;}
 .productosToolbar .grupos_list .badge.active{background-color:#0064cd;color:#efefef;}
 .productosToolbar .productosListWrapper{height:250px;overflow-y:scroll;}
