--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@
 //if IE 8
   <html class="no-js lt-ie9" lang="en">
 
-html(lang="en" , manifest="no.manifest")
+html(lang="en" , manifest="manifest")
   
   head
     meta(charset='utf-8')
