--- a/css/components/header.less
+++ b/css/components/header.less
@@ -66,7 +66,14 @@ header{
       }
     }
   }
+}
 
-
- 
+@media (max-width: 480px){
+  .navbar .brand {
+    img{
+      margin-left: 10px;
+      width: 100%;
+      width: 95px;
+    }
+  }
 }
