alpha version of smartProductos

--- a/css/general.less
+++ b/css/general.less
@@ -3,7 +3,7 @@ html {
 }
 
 
-@bodyMarginTop: 115px;
+@bodyMarginTop: 75px;
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -44,6 +44,10 @@ input.span1{
   }
 }
 
+
+.inline{
+  display: inline;
+}
 
 h5.preHeader {
   color: #333;
