--- a/css/index.less
+++ b/css/index.less
@@ -10,6 +10,9 @@
 @import "./components/datePicker.less";
 @import "./components/printHeader.less";
 @import "./components/print.less";
+@import "./components/mobileList.less";
+@import "./components/smartProductos.less";
+@import "./components/clientes.less";
 @import "./general.less";
 @import "./responsive.less";
 
@@ -44,7 +47,7 @@ body{
   }
 
   .appCanvas{
-    margin-top: 20px;
+    margin-top: 0px;
   }
 
 }
