new cuentas xp workflow

--- a/css/components/mobileList.less
+++ b/css/components/mobileList.less
@@ -1,6 +1,10 @@
 .mobileList{
   margin-bottom: 0px;
   
+  .mobileList{
+    margin: 5px 0px;
+  }
+  
     >li{    
       background-color: @gray;
       padding: 8px;
