--- a/css/components/notificaciones.less
+++ b/css/components/notificaciones.less
@@ -17,10 +17,8 @@
 
   .notificacion_list{
     li{
-      padding: 0px 4px 0px 10px;
-      margin-bottom: 15px;
-      border-right: 1px solid #999;      
       cursor: pointer;
+      padding-left: 4px;
 
       &.pending{
         border-right: 2px solid @blue;      
@@ -41,11 +39,10 @@
       h6{
         margin-bottom: 1px;
         line-height: 11px;
-        color: @blue;
+        color: @green;
       }
 
       .text{
-        display: inline;
         margin-bottom: 0px;
         padding-bottom: 0px;
         font-weight: 200;
