--- a/css/components/mobileList.less
+++ b/css/components/mobileList.less
@@ -20,6 +20,11 @@
       border: 1px solid @btnBorder;
       .box-shadow(~"inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05)");
   
+      &.header{
+        .buttonBackground(@btnPrimaryBackground, @btnPrimaryBackgroundHighlight);
+        color: #fff;
+      }
+  
       &:first-child{
         .border-radius(4px 4px 0px 0px);
       }
