--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,7 +36,7 @@ html(lang="en" , manifest="cache.manifest")
         
         window.applicationCache.addEventListener( 'progress', function(e) {
           if(exports && exports.app){
-            exports.app.showUpdating();
+            //exports.app.showUpdating();
           }
         });
       
