Deleted files manually

--- a/css/general.less
+++ b/css/general.less
@@ -127,6 +127,10 @@ td.center{
     top: 0px;
     right: 10px;
     text-align: right;
+    
+    input{
+      margin-bottom: 0px;
+    }
   }
 
   margin-top: 15px;
