--- a/css/general.less
+++ b/css/general.less
@@ -49,6 +49,10 @@ input.span1{
   display: inline;
 }
 
+.inlineBlock{
+  display: inline-block;
+}
+
 h5.preHeader {
   color: #333;
   font-size: 17px;
