integrate chatter social into erp

--- a/css/components/notificaciones.less
+++ b/css/components/notificaciones.less
@@ -20,6 +20,10 @@
       cursor: pointer;
       padding-left: 4px;
 
+      &.withMarginTop{
+        margin-top: 15px;
+      }
+
       &.pending{
         border-right: 2px solid @blue;      
       }
@@ -40,6 +44,11 @@
         margin-bottom: 1px;
         line-height: 11px;
         color: @green;
+      }
+
+      p{
+        line-height: 17px;
+        font-weight: 300;
       }
 
       .text{
