--- a/views/dev.jade
+++ b/views/dev.jade
@@ -31,6 +31,20 @@ html(lang="en" , manifest="manifest")
     
     script(src='/application.js', type='text/javascript', charset='utf-8')
 
+
+    script(type='text/javascript', charset='utf-8')
+      var analytics=analytics||[];analytics.load=function(e){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"===document.location.protocol?"https://":"http://")+"d2dq2ahtl5zl1z.cloudfront.net/analytics.js/v1/"+e+"/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);var r=function(e){return function(){analytics.push([e].concat(Array.prototype.slice.call(arguments,0)))}},i=["identify","track","trackLink","trackForm","trackClick","trackSubmit","pageview","ab","alias"];for(var s=0;s<i.length;s++)analytics[i[s]]=r(i[s])};
+      analytics.load("studpw6gry");
+
+    script(type='text/javascript', charset='utf-8')
+      var _errs=["50ff1fd239380d916c0008bc"];(function(a,b){a.onerror=function(){_errs.push(arguments)};
+      var d=function(){var a=b.createElement("script"),c=b.getElementsByTagName("script")[0];
+      a.src="//d15qhc0lu1ghnk.cloudfront.net/beacon.js";a.async=!0;
+      c.parentNode.insertBefore(a,c)};a.addEventListener?a.addEventListener("load",d,!1):
+      a.attachEvent("onload",d)})(window,document);
+    
+
+
     script(type='text/javascript', charset='utf-8')
       window.addEventListener('load', function(e) {
         
