--- a/css/helpers.less
+++ b/css/helpers.less
@@ -10,7 +10,11 @@
   margin: 7px;
 }
 
-.display_inlineBlock{
+.display_inlineBlock {
+  display: inline-block !important;
+}
+
+.inlineBlock {
   display: inline-block !important;
 }
 
@@ -46,4 +50,8 @@
     font-size: 25px !important;
     padding: 7px !important;    
   }
+}
+
+.alignTop{
+  vertical-align:top;
 }
