printing laser invoice

--- a/css/components/print.less
+++ b/css/components/print.less
@@ -8,8 +8,16 @@
     padding: 0px;
     max-width: 800px;
     background: none;
+
+    -webkit-print-color-adjust: exact;
+    
     header,footer{
       display: none;
+    }
+    
+    img{
+      border: none !important;
+      outline: none !important;
     }
   }
 
