--- a/css/helpers.less
+++ b/css/helpers.less
@@ -22,6 +22,10 @@
   display: block;
 }
 
+.block{
+  display: block;
+}
+
 .pointer{
   cursor: pointer;
 }
@@ -54,4 +58,8 @@
 
 .alignTop{
   vertical-align:top;
+}
+
+.relative{
+  position: relative;
 }
