--- a/css/index.less
+++ b/css/index.less
@@ -14,6 +14,8 @@
 @import "./components/smartProductos.less";
 @import "./components/clientes.less";
 @import "./components/toggleButtons.less";
+@import "./components/invoice.less";
+
 
 @import "./general.less";
 @import "./responsive.less";
